--- a/ps-interior-impersonated.html
+++ b/ps-interior-impersonated.html
@@ -8,7 +8,7 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title> Missing family found safe in Tsavo East after 24-hour search operation </title>
+        <title> University student arraigned for impersonating Interior PS Omollo </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Latest News" name="keywords">
         <meta content="" name="description">
@@ -113,10 +113,10 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/lost.jpg" />
+                            <img src="img/tonyblare.jpg" />
                             
-                                    <a class="tn-date" href=""><i class="far fa-clock"></i>08-Apr-2025</a>
-                            <h1> Missing family found safe in Tsavo East after 24-hour search operation </h1>
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>15-Apr-2025</a>
+                            <h1>University student arraigned for impersonating Interior PS Omollo  </h1>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -129,8 +129,10 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-<p>A family that went missing in Tsavo East National Park has been found after a 24-hour search operation.</p>
-<p>In a statement on Tuesday, the Kenya Wildlife Service (KWS) said the family of four was located by a Tsavo Trust pilot near Kabaguchi Ranger Camp on the remote Yatta Plateau, approximately 50 kilometres north of their planned route. </p>
+<p>Detectives from the Directorate of Criminal Investigations (DCI) have arrested two suspects on suspicion of impersonating high-ranking government officials to defraud the public. </p>
+<p>According to the DCI, varsity student Tony Blair Okello and his accomplice Tyson Odhiambo Otieno were arrested at Tuuti and Namachanja areas of Bungoma county, respectively, for running social media accounts linked to government officials and defrauding unsuspecting victims. </p>
+
+<p>This, detectives say, contravenes Section 28 of the Computer Misuse Act, which highlights the offense of cyber squatting and Section 393 of the penal code, which details the conspiracy to commit a felony. </p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -142,11 +144,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>"Haller immediately landed his helicopter and confirmed that all four individuals were unharmed and in good health," read the statement in part adding that ground teams from KWS and Tsavo Trust are currently facilitating their safe extraction. </p>
+<p>Cyber squatting refers to illegally taking another person's name, trademark or domain names to deceive others. </p>
 
-<p>KWS reported that the family, a couple and their children, had entered the park on Saturday at 5:40 PM through Manyani Gate, intending to camp for two nights at Luggards Falls Special Campsite and exit via Sala Gate by Monday evening. </p>
-
-<p>Park authorities however launched an immediate search when the family failed to check out by the 8:00 PM deadline.</p>
+<p>Preliminary investigations established that Odhiambo was the mastermind behind opening numerous accounts, which he sold to other persons after training them on how to run the scamming venture. </p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -158,27 +158,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>The family is believed to have taken an unauthorized deviation from their planned route while on a game drive using their vehicle.</p>
+<p>In the case presented in court, Odhiambo's student, Tony Blair Okello, was accused of impersonating Interior Principal Secretary Dr. Raymond Omollo. </p>
 
-<p>"Their decision to remain with the vehicle played a critical role in their timely rescue," KWS added.</p>
-
-<p>The family is currently undergoing routine medical evaluations and will soon be reunited with their loved ones.</p>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p> A further interrogation to establish details of the incident will follow.</p>
-
-<p>Lauding the teams involved in the rescue, KWS maintained its commitment to ensure that all emergency response protocols will remain always be fully observed.</p>         
-
-
+<p>The duo was released on a Ksh.35,000 cash bail with the case coming up for mention on Monday. April 28.</p>
                                 </div>
                             </div>
                         </div>
