--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2><i class="fas fa-align-justify"></i>Entertainment</h2>
+                        <h2><i class="fas fa-align-justify"></i>Latest News</h2>
                         
                             <div class="col-md-6">
                                 <div class="cn-img">
-                                    <img src="img/burnaboy.jpg" />
-                                   <a class="cn-date" href="burnaboy.html"><i class="far fa-clock"></i>26-Feb-2025</a>
-                                            <a class="cn-title" href="burnaboy.html">Burna Boy to come perform in Kenya on March 1, 2025</a>
+                                    <img src="img/tonyblare.jpg" />
+                                   <a class="cn-date" href="ps-interior-impersonated.html"><i class="far fa-clock"></i>15-Apr-2025</a>
+                                            <a class="cn-title" href="ps-interior-impersonated.html">University student arraigned for impersonating Interior PS Omollo </a>
                                         </div>
                                     </div>
                            
