Update and rename US-judg-revoke-trump-move-to-revoke-immigrants-legal-status.html to US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html

--- a/US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html
+++ b/US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html
@@ -8,7 +8,7 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title> University student arraigned for impersonating Interior PS Omollo </title>
+        <title> US judge halts Trump move to revoke 500,000 immigrants' legal status </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Latest News" name="keywords">
         <meta content="" name="description">
@@ -113,10 +113,10 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/tonyblare.jpg" />
+                            <img src="img/Trump.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>15-Apr-2025</a>
-                            <h1>University student arraigned for impersonating Interior PS Omollo  </h1>
+                            <h1> US judge halts Trump move to revoke 500,000 immigrants' legal status </h1>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -128,11 +128,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
-<p>Detectives from the Directorate of Criminal Investigations (DCI) have arrested two suspects on suspicion of impersonating high-ranking government officials to defraud the public. </p>
-<p>According to the DCI, varsity student Tony Blair Okello and his accomplice Tyson Odhiambo Otieno were arrested at Tuuti and Namachanja areas of Bungoma county, respectively, for running social media accounts linked to government officials and defrauding unsuspecting victims. </p>
-
-<p>This, detectives say, contravenes Section 28 of the Computer Misuse Act, which highlights the offense of cyber squatting and Section 393 of the penal code, which details the conspiracy to commit a felony. </p>
+                            
+<p>A federal judge on Monday blocked US President Donald Trump's administration from quickly revoking the legal status of hundreds of thousands of immigrants from Venezuela, Cuba, Nicaragua and Haiti.</p>
+<p>The ruling by District Judge Indira Talwani in Boston is the latest order against Trump's rapid push to carry out mass deportations, particularly targeting Latin Americans.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -144,9 +142,11 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>Cyber squatting refers to illegally taking another person's name, trademark or domain names to deceive others. </p>
+<p>In March, the administration said it was moving to revoke the legal status of some 532,000 Cubans, Haitians, Nicaraguans and Venezuelans who came to the United States under a "parole" program initially launched by former president Joe Biden in October 2022.</p>
 
-<p>Preliminary investigations established that Odhiambo was the mastermind behind opening numerous accounts, which he sold to other persons after training them on how to run the scamming venture. </p>
+<p>"The court grants emergency relief staying the Termination of Parole Processes for Cubans, Haitians, Nicaraguans, and Venezuelans," Talwani wrote in her order.</p>
+
+<p>The parole program allowed entry to the United States for two years for up to 30,000 migrants per month from the four countries, which have grim human rights records.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -158,9 +158,14 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<p>In the case presented in court, Odhiambo's student, Tony Blair Okello, was accused of impersonating Interior Principal Secretary Dr. Raymond Omollo. </p>
+<p>In her order, Talwani said the Trump administration had acted on a flawed interpretation of immigration law, with expedited removal applicable to non-citizens entering the United States illegally, but not those authorized to be in the country, such as through the parole program.</p>
 
-<p>The duo was released on a Ksh.35,000 cash bail with the case coming up for mention on Monday. April 28.</p>
+<p>Under Trump's revocation, the immigrants would have lost their legal protection effective April 24, just 30 days after the Department of Homeland Security published its order in the Federal Register.</p>
+
+<p>Trump has vowed to deport "millions" of undocumented migrants in his second term, after running an election campaign that focused on illegal immigration.</p>
+
+<p>Among other measures, he has invoked rare wartime legislation to fly hundreds of alleged members of a Venezuelan gang to El Salvador, which is imprisoning the migrants.</p>
+ 
                                 </div>
                             </div>
                         </div>
