--- a/index.html
+++ b/index.html
@@ -384,6 +384,13 @@
                                             <a class="cn-title" href="ps-interior-impersonated.html">University student arraigned for impersonating Interior PS Omollo </a>
                                         </div>
                                     </div>
+                        <div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/Trump.jpg" />
+                                   <a class="cn-date" href="ps-interior-impersonated.html"><i class="far fa-clock"></i>15-Apr-2025</a>
+                                            <a class="cn-title" href="ps-interior-impersonated.html">University student arraigned for impersonating Interior PS Omollo </a>
+                                        </div>
+                        </div>
                            
                             
         <!-- Category News End-->
