--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
                         <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/Trump.jpg" />
-                                   <a class="cn-date" href="ps-interior-impersonated.html"><i class="far fa-clock"></i>15-Apr-2025</a>
-                                            <a class="cn-title" href="ps-interior-impersonated.html">University student arraigned for impersonating Interior PS Omollo </a>
+                                   <a class="cn-date" href=" US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html "><i class="far fa-clock"></i>15-Apr-2025</a>
+                                            <a class="cn-title" href=" US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html ">US judge halts Trump move to revoke 500,000 immigrants' legal status  </a>
                                         </div>
                         </div>
                            
