--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                     </div>
                         <div class="col-md-6">
                                 <div class="cn-img">
-                                    <img src="img/Trump.jpg" />
+                                    <img src="img/trump.jpg" />
                                    <a class="cn-date" href=" US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html "><i class="far fa-clock"></i>15-Apr-2025</a>
                                             <a class="cn-title" href=" US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html ">US judge halts Trump move to revoke 500,000 immigrants' legal status  </a>
                                         </div>
