--- a/US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html
+++ b/US-judge-revoke-trump-move-to-revoke-immigrants-legal-status.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/Trump.jpg" />
+                            <img src="img/trump.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>15-Apr-2025</a>
                             <h1> US judge halts Trump move to revoke 500,000 immigrants' legal status </h1>
