--- a/index.html
+++ b/index.html
@@ -360,6 +360,16 @@
                                     </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
+                                    <img src="img/insurance.jpg" />
+
+                                            <a class="cn-date" href="advantages-of-having-an-Insurance-cover.html"><i class="far fa-clock"></i>30-Apr-2025</a>
+                                            <a class="cn-title" href="advantages-of-having-an-Insurance-cover.html">Advantages of having an Insurance cover in 2025</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="cn-img">
                                     <img src="img/navigating.png" />
 
                                             <a class="cn-date" href="navigating-disagreements-in-corporate-business.html"><i class="far fa-clock"></i>24-Mar-2025</a>
