--- a/advantages-of-having-an-Insurance-cover.html
+++ b/advantages-of-having-an-Insurance-cover.html
@@ -111,9 +111,9 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/navigating.png" />
+                            <img src="img/insurance.jpg" />
                             
-                                    <a class="tn-date" href=""><i class="far fa-clock"></i>30-May-2025</a>
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>30-Apr-2025</a>
                           <h3>Why you should consider having Insurance cover in 2025</h3>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
