--- a/advantages-of-having-an-Insurance-cover.html
+++ b/advantages-of-having-an-Insurance-cover.html
@@ -114,7 +114,7 @@
                             <img src="img/insurance.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>30-Apr-2025</a>
-                          <h3>Why you should consider having Insurance cover in 2025</h3>
+                          <h3>Why you should consider having an Insurance cover in 2025</h3>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
