--- a/index.html
+++ b/index.html
@@ -360,6 +360,14 @@
                                     </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
+                                    <img src="img/stock-market.jpg" />
+
+                                            <a class="cn-date" href="How-to-Hedge-Against-a-Crash-Without-the-Panic.html"><i class="far fa-clock"></i>30-Apr-2025</a>
+                                            <a class="cn-title" href="How-to-Hedge-Against-a-Crash-Without-the-Panic.html">Nervous About the U.S. Stock Market? How to Hedge Against a Crash—Without the Panic.</a>
+                                        </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="cn-img">
                                     <img src="img/insurance.jpg" />
 
                                             <a class="cn-date" href="advantages-of-having-an-Insurance-cover.html"><i class="far fa-clock"></i>30-Apr-2025</a>
