--- a/index.html
+++ b/index.html
@@ -360,6 +360,13 @@
                                     </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
+                                    <img src="img/smallbusiness.jpg" />
+
+                                            <a class="cn-date" href="Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html"><i class="far fa-clock"></i>01-May-2025</a>
+                                            <a class="cn-title" href="Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html">Small Business Ideas for Aspiring Entrepreneurs in 2025</a>
+                                        </div>
+                            <div class="col-md-6">
+                                <div class="cn-img">
                                     <img src="img/stock-market.jpg" />
 
                                             <a class="cn-date" href="How-to-Hedge-Against-a-Crash-Without-the-Panic.html"><i class="far fa-clock"></i>30-Apr-2025</a>
