--- a/Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html
+++ b/Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/stock-market.jpg" />
+                            <img src="img/smallbusiness.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>01-May-2025</a>
                           <h3>Small Business Ideas for Aspiring Entrepreneurs in 2025</h3>
