--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
                                             <a class="cn-date" href="Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html"><i class="far fa-clock"></i>01-May-2025</a>
                                             <a class="cn-title" href="Small-Business-Ideas-for-Aspiring-Entrepreneurs-in-2025.html">Small Business Ideas for Aspiring Entrepreneurs in 2025</a>
                                         </div>
+                                </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/stock-market.jpg" />
