--- a/mukhwana-speal-beans-over-Ojwang's- Death.html
+++ b/mukhwana-speal-beans-over-Ojwang's- Death.html
@@ -115,77 +115,11 @@
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>17-June-2025</a>
                           <h1>Constable James Mukhwana spills the beans on Albert Ojwang’s death</h1>
-                               <p> You may not be a tech expert or have coding skills, but you can still build a lucrative income with AI. If you’re not leveraging artificial intelligence to supplement your salary or grow your full-time business online, you're leaving money on the table.</p>
+                              <p> Police Constable James Mukhwana, currently in custody over the brutal killing of blogger and teacher Albert Ojwang’, has broken his silence, revealing chilling details about what transpired on the night of June 7, 2025, while Ojwang’ was held at the Central Police Station.</p>
 
-<p>Everyday professionals are finding innovative ways and use cases for maximizing the power of artificial intelligence, especially generative AI, to advance their careers and modify their income. So, why aren't you?</p>
-<p>You’ve probably seen articles on the internet that cite well-known AI apps like ChatGPT and Midjourney as tools to help you make money. But what about the other AI-powered tools that are not so obvious but still leverage the power of automation to drive results?</p>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<h3>3 AI-Powered Tools To Boost Your Income In 2025</h3>
-<p>Below are three AI-powered tools you absolutely need in your career toolkit, whether you’re a freelancer, side hustle pro, start-up entrepreneur, student, or full-time employed professional.</p>
+<p>A blow-by-blow account, exclusively in Citizen TV’s possession, now sheds new light on the events of that night when Ojwang’ died while in custody.</p>
 
-<p>You may not be a tech expert or have coding skills, but you can still build a lucrative income with AI. If you’re not leveraging artificial intelligence to supplement your salary or grow your full-time business online, you're leaving money on the table.</p>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p>Everyday professionals are finding innovative ways and use cases for maximizing the power of artificial intelligence, especially generative AI, to advance their careers and modify their income. So, why aren't you? </p>
-
-
-Using these can help you make real money from the AI boom, and they’ll also help you work smarter so you’re not chasing work and trading your hours for revenue, ending up burnt out.
-
-<h4>1. SEMrush</h4>
-<p>SEMrush is one of the most essential tools you’ll need from day one when launching a freelance business. It works both ways to make money. It helps you identify the needs of your audience so you can rank highly in google search engine results which boosts your visibility and attracts more clients. This is great if you’re creating a content marketing strategy for your existing business or are a blogger. But beyond this, SEMrush also helps you create targeted digital marketing campaigns for clients as a freelance marketing consultant or marketing manager.</p>
-
-<p>You can use the insights gained through this platform’s AI-powered ranking tools to offer and sell SEO optimization services for small businesses.</p>
-
-<h4>2. Mailchimp</h4>
-<p>Mailchimp is another AI-powered tool that many marketing professionals use to reach their audiences through email. It contains features that help you automate your email marketing, like recommending when to resend emails and analyzing your audience behavior. Mailchimp also has AI marketing tools that it hosts through Intuit Assist, some of which are still being rolled out.</p>
-<p>Below are three AI-powered tools you absolutely need in your career toolkit, whether you’re a freelancer, side hustle pro, start-up entrepreneur, student, or full-time employed professional.</p>
-
-<h4>To make money from MailChimp, you could:</h4>
-
-<p>Build a subscriber base and monetize your email newsletter by including affiliate links, linking to your other services, or securing sponsorships and ad placements
-Offer email marketing and sales funnels for businesses, based on tried and tested campaigns you’ve personally delivered using MailChimp</p>
-<h4>3. Fiverr AI Chatbot</h4>
-<p>Recently, the freelancing platform Fiverr released an AI-powered chatbot feature that allows freelancers to essentially have conversations and consultations with potential clients. This is based on your knowledge bank of data which you'd feed to the chatbot. It allows you to receive bookings and make money even while you are away or sleeping so you don't need to constantly be glued to your laptop or phone.
-
-<p>Lisa Taranchenko, a full-time freelance illustrator on Fiverr, explains, “It has a knowledge base where it learns from my past conversations and my gig descriptions, and you can even edit it yourself as well if something doesn’t seem right. So that’s been amazing because I can even talk to clients while I sleep at night or while I'm sick.
-For example, my daughter was sick last week and I didn’t have to worry about being on my phone constantly and I could pay more attention to her,” Taranchenko said.
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-8r+ez-1j-39+br"
-     data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="9681146952"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p>Don’t you think it’s time for you to unlock the potential of artificial intelligence in your own work so that you can leverage your skills to make more money? Familiarize yourself with these AI tools and don’t be afraid to experiment with them. Follow their helpful guides and tutorials so you can really maximize these features, boost your income and results, and be more effective in your work.
-<h2>Making Money With AI FAQs</h2>
-<h4>Can I really make money with AI?</h4>
-
-<p>Yes of course you can. AI itself is not a magic tool, however. But combined with your human expertise, you can leverage AI tools to save you time and make money faster than would have been possible otherwise.</p>
-
-<h4>What is the best AI app to make money?</h4>
+<p>The damning statement, recorded by detained Police Constable James Mukhwana, directly implicates the Officer Commanding Station (OCS), Samson Talaam, alleging that he issued instructions to “discipline” Ojwang’—orders Mukhwana claims originated from Deputy Inspector General of Police Eliud Lagat.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -198,9 +132,56 @@ For example, my daughter was sick last week and I didn’t have to worry about b
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-<p>There’s no single app that has “magic” powers to make more money than others. As mentioned earlier, it’s not the app that makes a huge difference in itself, it’s what you do with it. That being said, ChatGPT, being highly versatile as a generative AI tool, is probably one of the best AI apps to make money because there are so many use cases, from creating business plans, to content strategies, to writing content, to data analysis and more.</p>
-  <h6>Source: Forbes<h/6>
-                                </div>
+   <p>This comes despite OCS Talaam having publicly distanced himself from the murder allegations.</p>
+
+<p>In his detailed statement to investigators from the Independent Policing Oversight Authority (IPOA), Mukhwana narrates being summoned to the OCS’s office during his shift. He was allegedly told: “There is a directive from DIG Lagat. Do you know him? There are officers from the DCI headquarters bringing a suspect here at 8:00 p.m. Tell the inmates to discipline him a bit.”</p>
+
+<p>When Mukhwana raised concerns about what could go wrong, he says he was warned against questioning orders as a junior officer and bluntly told that disobedience could cost him.</p>
+
+<p>Later that night, at around 9:00 p.m., a black Subaru pulled up at the station. Inside was a man in handcuffs, later identified as Albert Ojwang’. Mukhwana says he called OCS Talaam, who confirmed that Ojwang’ was the suspect in question.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>Ojwang’ was booked into custody at around 9:20 p.m., and shortly after, the assault began inside the last cell opposite the toilets. Mukhwana states that four inmates—Collins Ireri, Gil Ammiton, Brian Mwaniki, and Erick Ndambuki—were instructed to carry out the beatings. All four have since been arrested and arraigned in court.</p>
+
+<p>As the beatings escalated, Mukhwana claims he and another officer, PC Kimani, rushed in to stop the torture. Ojwang’ was found bleeding, leaning against the wall. Mukhwana says he immediately asked the Deputy OCS, Samuel Nganga, to take Ojwang’ to hospital. It was around 10:00 p.m. when he left for home.</p>
+
+<p>The following day, on June 8, he began receiving numerous calls from colleagues asking if he had heard what had happened to Ojwang’. When he reached out to Nganga for clarity, he was advised to call the OCS. OCS Talaam reportedly brushed off his concerns, telling him “things were not bad” and that they were “safe.”</p>
+
+<p>But by June 11, Mukhwana had been summoned by IPOA to record a formal statement. He admits that in his initial testimony, he withheld the truth as part of a pact among the officers to cover for one another. However, he later discovered he was being scapegoated by his colleagues.</p>
+
+<p>Haunted by guilt, Mukhwana says he returned to IPOA on June 12 and asked to record a second, truthful statement. He was arrested and taken to Capitol Hill Police Station. There, he finally came clean.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<p>In his emotional conclusion, Mukhwana states:
+
+<p>“This is the truth of what happened. Ojwang’ was not meant to be killed but to be disciplined as per instruction of the OCS Talaam, who was under the instruction of DIG Lagat. I am sorry for the death of Ojwang’. May God help them to heal the loss. I know it is painful.”</p>
+
+<p>Through his lawyers, Mukhwana has now requested placement under witness protection, stating he is ready to tell the whole truth.</p>
+
+<p>Mukhwana’s legal team—Kevin Ondago, Clinton Mwale, and Bietta Wavinya—now say their client has instructed them not to seek his release on bail, citing concerns over his personal safety.</p>
+
+
+<p>The lawyers also claim they have been trailed and intimidated by individuals believed to be police officers. A formal complaint has since been lodged at the Capitol Hill Police Station. </p>  
+                            <p>Source: Citizen Digital</p>
+                        </div>
                             </div>
                         </div>
                     </div>
