--- a/mukhwana-speal-beans-over-Ojwang's- Death.html
+++ b/mukhwana-speal-beans-over-Ojwang's- Death.html
@@ -37,7 +37,7 @@
                     <div class="col-lg-3 col-md-4">
                         <div class="logo">
                             <a href="">
-                                <img src="img/logo.jpg" alt="Logo">
+                                <img src="img/mukhwana.jpg" alt="">
                             </a>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/ai.jpg" />
+                            <img src="img/mukhwana.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>17-June-2025</a>
                           <h1>Constable James Mukhwana spills the beans on Albert Ojwang’s death</h1>
