--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                 <div class="tn-img">
                                     <img src="img/aimoney.jpg" />
                                     
-                                            <a class="tn-date" href="3 AI Tools To Make Money Online in 2025.html"><i class="far fa-clock"></i>20-Mar-2025</a>
-                                    <a class="cn-title" href="3 AI Tools To Make Money Online in 2025.html"> 3 AI Tools To Make Money Online in 2025</a>
+                                            <a class="tn-date" href="3 AI tools to make money online in 2025.html"><i class="far fa-clock"></i>20-Mar-2025</a>
+                                    <a class="cn-title" href="3 AI tools to make money online in 2025.html"> 3 AI Tools To Make Money Online in 2025</a>
                                         </div>   
                                             
                                         </div>
