--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <img src="img/mukhwana.jpg" />
                                     
                                             <a class="tn-date" href="mukhwana-speal-beans-over-Ojwang's-Death.html"><i class="far fa-clock"></i>17-June-2025</a>
-                                    <a class="cn-title" href="mukhwana-speal-beans-over-Ojwang's-Death.html.html"> Constable Mukhwana Speal Beans over Ojwang's Death</a>
+                                    <a class="cn-title" href="mukhwana-speal-beans-over-Ojwang's-Death.html"> Constable Mukhwana Speal Beans over Ojwang's Death</a>
                         </div>
                         <div class="tn-img">
                                     <img src="img/sifuna.jpg" />
