--- a/mukhwana-speal-beans-over-Ojwang's-Death.html
+++ b/mukhwana-speal-beans-over-Ojwang's-Death.html
@@ -8,7 +8,7 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
         <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title>3 AI Tools to make money online in 2025</title>
+        <title>Constable Mukhwana Speal Beans Over Ojwang's Death</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
